--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    "LoginPass": "CH_MOBPO1_01:fgd$#456DF",
-    "SapURL": "http://sappo1ci.sap.metinvest.com:50000/RESTAdapter",
-    "DBConnect": "Host=10.55.60.90;Username=postgres;Password=123qweQWE;Database=Portal.Bot.Dev",
+    "LoginPass": "CH_MOBPO2_01:fgd$#456DF",
+    "SapURL": "https://sappo2ci.sap.metinvest.com:50001/RESTAdapter",
+    "DBConnect": "Host=10.55.60.90;Username=postgres;Password=123qweQWE;Database=Portal.Bot",
     "1CLoginPass": "obmenportal:Service2021",
     "1CURL":"http://co-1czup3as1.co.metinvest.com/test-4_ukmi_zup/hs/portalIntegration/data"
   },
