--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,11 @@
     "SapURL": "http://sappo2ci.sap.metinvest.com:50000/RESTAdapter",
     "DBConnect": "Host=10.55.60.90;Username=postgres;Password=123qweQWE;Database=Portal.Bot",
     "1CLoginPass": "obmenportal:Service2021",
-    "1CURL":"http://co-1czup3as1.co.metinvest.com/ukmi_zup/hs/portalIntegration/data",
-    "1CURLTest":"http://co-1czup3as1.co.metinvest.com/test-4_ukmi_zup/hs/portalIntegration/data"
+    "1CMKSLoginPass": "obmenportal:Service2021",
+    "1CURL":"http://co-1czup3as1.co.metinvest.com/test-4_ukmi_zup/hs/portalIntegration/data",
+    "1CURLTest":"http://co-1czup3as1.co.metinvest.com/test-4_ukmi_zup/hs/portalIntegration/data",
+    "1CMKSURL":"http://10.55.60.182/test-101_dzo_zupcorp/hs/portalIntegration/data",
+    "1CMKSURLTest":"http://10.55.60.182/test-101_dzo_zupcorp/hs/portalIntegration/data"
   },
   "Logging": {
     "LogLevel": {
